WS/k8s.labs.basic.04/01_getting-started/08-ingress/yaml/ingress.k8s-ws.v1.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: k8s-ws
spec:
  backend:
    serviceName: mysvc
    servicePort: 80
