WS/k8s.labs.basic.04/01_getting-started/08-ingress/yaml/ingress.k8s-ws.v2.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: k8s-ws
spec:
  rules:
  - host: 
    http:
      paths:
      - path: /
        backend:
          serviceName: mysvc
          servicePort: 80
      - path: /hello
        backend:
          serviceName: hello
          servicePort: 80
